fix: enable vertical overflow scroll

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -12,7 +12,6 @@ body {
 }
 
 body {
-  overflow-y: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
 
